idf_component_register(
    SRCS
        main.c
        rc_input.c
        servo.c
        steering.c
        engine.c
        safety.c
        display.c
        calibration.c
        rmt_pulse_gen/rmt_pulse_gen.c
        rmt_pulse_gen/pcnt_tracker.c
    INCLUDE_DIRS
        .
        rmt_pulse_gen
    REQUIRES
        driver
        esp_timer
        esp_system
        freertos
        nvs_flash
        log
)
